@@ -19,3 +19,5 @@
         После этого в map должны оказаться актуальные значения зарплат и айди сотрудников.
     V. Далее из map, с помощью тех же
         стримов получить лист Salary и сохранить его обратно в базу с помощью batchUpdate();
+
+---// 3.09.2025 //---
